force-app/main/default/objects/PAR_Retry__c/PAR_Retry__c.object-meta.xml
<CustomObject>
    <label>PAR Retry</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PAR Retry</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>