force-app/main/default/objects/PAR_Retry__c/fields/ApprovalResolution__c.field-meta.xml
<CustomField>
    <fullName>ApprovalResolution__c</fullName>
    <label>ApprovalResolution</label>
    <length>80</length>
    <type>Text</type>
</CustomField>