force-app/main/default/objects/PAR_Retry__c/fields/ApproverComment__c.field-meta.xml
<CustomField>
    <fullName>ApproverComment__c</fullName>
    <label>ApproverComment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>