force-app/main/default/objects/PAR_Retry__c/fields/ApproverEmail__c.field-meta.xml
<CustomField>
    <fullName>ApproverEmail__c</fullName>
    <label>ApproverEmail</label>
    <type>Email</type>
</CustomField>