force-app/main/default/objects/PAR_Retry__c/fields/ApproverUser__c.field-meta.xml
<CustomField>
    <fullName>ApproverUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ApproverUser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PAR_Retry</relationshipName>
    <type>Lookup</type>
</CustomField>