force-app/main/default/objects/PAR_Retry__c/fields/LastAttemptAt__c.field-meta.xml
<CustomField>
    <fullName>LastAttemptAt__c</fullName>
    <label>LastAttemptAt</label>
    <type>DateTime</type>
</CustomField>