force-app/main/default/objects/PAR_Retry__c/fields/LastError__c.field-meta.xml
<CustomField>
    <fullName>LastError__c</fullName>
    <label>LastError</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>