force-app/main/default/objects/PAR_Retry__c/fields/MaxAttempts__c.field-meta.xml
<CustomField>
    <fullName>MaxAttempts__c</fullName>
    <label>MaxAttempts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>