force-app/main/default/objects/PAR_Retry__c/fields/NextAttemptAt__c.field-meta.xml
<CustomField>
    <fullName>NextAttemptAt__c</fullName>
    <label>NextAttemptAt</label>
    <type>DateTime</type>
</CustomField>