force-app/main/default/objects/PAR_Retry__c/fields/NotificationSent__c.field-meta.xml
<CustomField>
    <fullName>NotificationSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NotificationSent</label>
    <type>Checkbox</type>
</CustomField>