force-app/main/default/objects/PAR_Retry__c/fields/PAR__c.field-meta.xml
<CustomField>
    <fullName>PAR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PAR</label>
    <referenceTo>PriceApprovalRequest__c</referenceTo>
    <relationshipLabel>PAR Retry</relationshipLabel>
    <relationshipName>PAR_Retry</relationshipName>
    <type>Lookup</type>
</CustomField>